<?xml version="1.0"?>
<package>
  <name>state_estimator</name>
  <version>0.0.0</version>
  <description>state_estimator package</description>

  <maintainer email="Changhyeon@gmail.com">ChanghyeonKim</maintainer>

  <license>FREE</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>