<?xml version="1.0"?>
<package>
  <name>error_state_kalman_filter_ros</name>
  <version>0.0.0</version>
  <description>error_state_kalman_filter_ros package</description>

  <maintainer email="Changhyeon@gmail.com">ChanghyeonKim</maintainer>

  <license>FREE</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>